--- a/_posts/2018-9-25-Dakar18.markdown
+++ b/_posts/2018-9-25-Dakar18.markdown
@@ -9,9 +9,9 @@ icon: /images/icons/ue4.png
 
 Had the pleasure to work with an excelent team of over 40 people on the environments of this very ambitious game. 
 
-[![Dakar 18 #1]({{ site.url }}/images/dakar18/dakar18_1.jpg)]
+[![Dakar 18 #1]({{ site.url }}/images/dakar18/dakar18_1.jpg)]({{ site.url }}/images/dakar18/dakar18_1.jpg)
 
-[![Dakar 18 #2]({{ site.url }}/images/dakar18/dakar18_2.jpg)]
+[![Dakar 18 #2]({{ site.url }}/images/dakar18/dakar18_2.jpg)]({{ site.url }}/images/dakar18/dakar18_2.jpg)
 
-[![Dakar 18 #3]({{ site.url }}/images/dakar18/dakar18_3.jpg)]
+[![Dakar 18 #3]({{ site.url }}/images/dakar18/dakar18_3.jpg)]({{ site.url }}/images/dakar18/dakar18_3.jpg)
 
